@@ -1,0 +1,3 @@
+.. image:: test_png_dpi_1.png
+
+.. image:: test_png_dpi_2.png
